--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="py-[130px] bg-primary">
       <div class="max-w-my m-auto">
         <div class="flex items-center justify-between">
-          <div class="bannerTexts w-[44%]">
+          <div class="bannerTexts w-[46%]">
             <h1
               class="font-bold font-inter text-[65px] text-[#FFFEFE] leading-20"
             >
@@ -111,16 +111,16 @@
     <!-- Service Part Start  -->
     <div class="py-[100px]">
       <div class="max-w-my m-auto">
-        <h3 class="text-center text-[#181818] font-bold font-inter text-[40px]">
-          Our Services
-        </h3>
-        <div class="text-center place-items-center">
-          <p
-            class="text-[#181818] text-[16px] leading-7 font-inter pt-6 pb-10 w-[542px]"
-          >
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form.
-          </p>
+        <div class="text-center">
+          <h3 class="text-[#181818] font-bold font-inter text-[40px]">
+            Our Services
+          </h3>
+            <p
+              class="text-[#181818] text-[16px] leading-7 font-inter pt-6 pb-10 px-[315px]"
+            >
+              There are many variations of passages of Lorem Ipsum available, but
+              the majority have suffered alteration in some form.
+            </p>
         </div>
         <div class="flex justify-between gap-4 gap-y-8 flex-wrap">
           <div
@@ -341,17 +341,20 @@
     <!-- Work Portfolio Part Start  -->
     <div class="pb-[100px]">
       <div class="max-w-my m-auto">
-        <h3 class="text-center text-[#181818] font-bold font-inter text-[40px]">
-          Our Work Portfolio
-        </h3>
-        <div class="text-center place-items-center">
-          <p
-            class="text-[#181818] text-[16px] leading-7 font-inter pt-6 pb-10 w-[542px]"
-          >
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form.
-          </p>
+
+        <div class="text-center">
+          <h3 class="text-[#181818] font-bold font-inter text-[40px]">
+            Our Work Portfolio
+          </h3>
+            <p
+              class="text-[#181818] text-[16px] leading-7 font-inter pt-6 pb-10 px-[315px]"
+            >
+              There are many variations of passages of Lorem Ipsum available, but
+              the majority have suffered alteration in some form.
+            </p>
         </div>
+
+
         <div class="flex justify-between gap-4 gap-y-8 flex-wrap">
           <div class="relative group">
             <picture>
@@ -452,16 +455,16 @@
     <!-- Team Member Part Start  -->
     <div class="pb-[100px]">
       <div class="max-w-my m-auto">
-        <h3 class="text-center text-[#181818] font-bold font-inter text-[40px]">
-          Our Expert Team Member
-        </h3>
-        <div class="text-center place-items-center">
-          <p
-            class="text-[#181818] text-[16px] leading-7 font-inter pt-6 pb-10 w-[542px]"
-          >
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form.
-          </p>
+        <div class="text-center">
+          <h3 class="text-[#181818] font-bold font-inter text-[40px]">
+            Our Expert Team Member
+          </h3>
+            <p
+              class="text-[#181818] text-[16px] leading-7 font-inter pt-6 pb-10 px-[315px]"
+            >
+              There are many variations of passages of Lorem Ipsum available, but
+              the majority have suffered alteration in some form.
+            </p>
         </div>
         <div class="flex justify-between gap-4 gap-y-8 flex-wrap">
           
