--- a/index.html
+++ b/index.html
@@ -856,28 +856,28 @@
           <div class="company">
             <h5 class="font-semibold font-inter text-[20px] text-[#181818] pb-6">Company</h5>
             <ul>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">About Us</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Work</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Latest News</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Careers</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">About Us</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Work</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Latest News</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Careers</a></li>
             </ul>
           </div>
           <div class="product">
             <h5 class="font-semibold font-inter text-[20px] text-[#181818] pb-6">Product</h5>
             <ul>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Prototype</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Plans & Pricing</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Customers</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Integrations</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Prototype</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Plans & Pricing</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Customers</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Integrations</a></li>
             </ul>
           </div>
           <div class="support">
             <h5 class="font-semibold font-inter text-[20px] text-[#181818] pb-6">Support</h5>
             <ul>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Help Desk</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Sales</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Become a Partner</a></li>
-              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d]">Developers</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Help Desk</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Sales</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Become a Partner</a></li>
+              <li class="pb-3"><a href="#" class="font-inter text-[16px] text-[#5d5d5d] hover:text-primary">Developers</a></li>
             </ul>
           </div>
           <div class="contact">
