Cursor-pointer added

--- a/index.html
+++ b/index.html
@@ -841,13 +841,13 @@
               majority have suffered alteration in some form.
             </p>
             <div class="flex gap-4 pt-2.5">
-              <div class="fb bg-white py-2.5 px-3.5 w-11 rounded-full">
+              <div class="fb bg-white py-2.5 px-3.5 w-11 rounded-full cursor-pointer">
                 <i
                   class="fa-brands fa-facebook-f text-[20px] text-[#337FFF]"
                 ></i>
               </div>
               <div
-                class="twitter bg-white py-[10px] px-[13px] w-11 rounded-full"
+                class="twitter bg-white py-[10px] px-[13px] w-11 rounded-full cursor-pointer"
               >
                 <i class="fa-brands fa-twitter text-[20px] text-[#33CCFF]"></i>
               </div>
